snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220817.141111-2.pom.sha256
2744b094d60951eef067dfdf52981275586d37ac945d1e49c65276247c5309d0